chore: rename files to reflect updated project and repository name

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>taskmanager</artifactId>
+	<artifactId>userauth</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>TaskManager</name>
+	<name>UserAuth</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
